<resources>
    <string name="app_name">Mèo Méo Méo Lmeo</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="server_client_id">562266542676-fo59c0rmm80ddosuc30rnkh60pdmddns.apps.googleusercontent.com</string>
    <string name="facebook_app_id">723390519668009</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="login">Đăng nhập</string>
    <string name="email">Email\n</string>
    <string name="password">Password</string>
    <string name="login_btn">Đăng nhập tài khoản</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="register">Đăng ký</string>
    <string name="address">Địa chỉ</string>
    <string name="phone_number">Số Điện Thoại</string>
    <string name="userName">User Name</string>
    <string name="submit">Submit\n</string>
    <string name="forgot_password_tittle">Quên Mật Khẩu</string>
    <string name="register_tittle" >Đăng Ký</string>
    <string name="register_login_btn" > Bạn đã có tài khoản ?Click me...</string>
    <string name="open">Open Nav</string>
    <string name="close">Close Nav</string>
    <string name="homepage">Trang chủ</string>
    <string name="category">Danh Mục</string>
    <string name="cart">Giỏ Hàng</string>
    <string name="order_history">Lịch Sử Mua Hàng</string>
    <string name="user_profile">Thông tin người dùng</string>
    <string name="logout">Đăng Xuất</string>
    <string name="category_tittle">Danh sách thể loại</string>
    <string name="homepage_product_list">Danh sách các sản phẩm</string>
    <string name="homepage_product_popular">Sản phẩm phổ biến</string>
    <string name="homepage_product_list_newest">Sản phẩm mới nhất</string>
    <string name="homepage_events">Các sự kiện nổi bật</string>
    <string name="homepage_drinking_popular">Đồ uống đa dạng</string>
    <string name="homepage_pet_food">Chọn món cho boss đi sen </string>
    <string name="homepage_cake">Bánh ngọt cho các nàng thơ</string>
    <string name="homepage_other_food">Các món khác có thể bạn sẽ thích</string>
    <dimen name="item_margin">1dp</dimen>
    <dimen name="grid_spacing">8dp</dimen>
</resources>